--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,17 +2,18 @@
     "version": 2,
     "builds": [
         {
-            "src": "index.py",
-            "use": "@vercel/python",
-            "config": {
-                "runtime": "python3.12"
-            }
+            "src": "wsgi.py",
+            "use": "@vercel/python"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/"
+            "dest": "/wsgi.py"
         }
-    ]
+    ],
+    "env": {
+        "FLASK_ENV": "production",
+        "FLASK_APP": "wsgi.py"
+    }
 }
