--- a/NEXTJS/web/package.json
+++ b/NEXTJS/web/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^4.4.7",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
+    "mongoose": "^8.9.3",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
