--- a/NEXTJS/web/package.json
+++ b/NEXTJS/web/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.469.0",
     "mongoose": "^8.9.3",
     "next": "15.1.3",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
