--- a/NEXTJS/web/package.json
+++ b/NEXTJS/web/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "chart.js": "^4.4.7",
+    "firebase-admin": "^13.0.2",
+    "formidable": "^3.5.2",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
     "mongoose": "^8.9.3",
     "next": "15.1.3",
     "nodemailer": "^6.10.0",
+    "raw-body": "^3.0.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "stream": "^0.0.3",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
