--- a/NEXTJS/web/package.json
+++ b/NEXTJS/web/package.json
@@ -21,6 +21,8 @@
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "stream": "^0.0.3",
     "uuid": "^11.0.5"
   },
