--- a/NEXTJS/web/package.json
+++ b/NEXTJS/web/package.json
@@ -16,8 +16,9 @@
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
     "mongoose": "^8.9.3",
-    "next": "15.1.3",
-    "nodemailer": "^6.10.0",
+    "next": "^15.5.9",
+    "nextjs": "^0.0.3",
+    "nodemailer": "^7.0.12",
     "raw-body": "^3.0.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
